--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           push: true
           tags: babinich/babinich:latest
+          file: infra_actions/Docker
 
   deploy:
     runs-on: ubuntu-latest
